<resources>
    <string name="app_name">Serv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_order">Orders</string>
    <string name="title_account">Accounts</string>
    <string name="title_product">Product</string>
    <string name="title_logout">Logout</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="title_new_order">New Order</string>
    <string name="title_repeat_order">Repeat Order</string>
    <string name="title_select_mutiple">Select Mutiple</string>
    <string name="title_performance">Performance</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_filter">Filter</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_order_from_history">Order from history</string>
    <string name="title_send">Send</string>
    <string name="title_save">Save</string>
    <string name="title_customer">Customer</string>

</resources>