<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_order"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_new_order"
        app:titleTextAppearance="@style/PoppinsTextMediumSemiBoldStyle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFiltersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewCustomer"
                style="@style/PoppinsTextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCustomer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutCustomer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:theme="@style/TextInputLayoutStyle"
                app:endIconDrawable="@drawable/ic_list"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageViewCustomer"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCustomer"
                    style="@style/PoppinsTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Customer"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ImageViewTerms"
                style="@style/PoppinsTextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_terms"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutTerms"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutTerms"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutTerms" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:theme="@style/TextInputLayoutStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ImageViewTerms"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCustomer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTerms"
                    style="@style/PoppinsTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Terms"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ImageViewDiscount"
                style="@style/PoppinsTextSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_discount"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDiscount1"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutDiscount1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutDiscount1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDiscount1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:theme="@style/TextInputLayoutStyle"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutDiscount2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ImageViewDiscount"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTerms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDiscount1"
                    style="@style/PoppinsTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Discount 1"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDiscount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDiscount1"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutDiscount3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textInputLayoutDiscount1"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutDiscount1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDiscount2"
                    style="@style/PoppinsTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Discount 2"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDiscount3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDiscount2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textInputLayoutDiscount2"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutDiscount2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDiscount3"
                    style="@style/PoppinsTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Discount 3"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/orderItemsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFiltersContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOrderItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewFiltersContainer" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonAddNewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:contentDescription="Add New Order"
            android:focusable="true"
            android:text="Add Item"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <TextView
        android:id="@+id/textViewOrderFromHistory"
        style="@style/PoppinsTextSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableTop="@drawable/ic_history"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/title_order_from_history"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textViewAddItem"
        app:layout_constraintEnd_toEndOf="@+id/orderItemsContainer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/orderItemsContainer"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFiltersContainer" />

    <TextView
        android:id="@+id/textViewAddItem"
        style="@style/PoppinsTextSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableTop="@drawable/ic_add"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/title_add_item"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/orderItemsContainer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/orderItemsContainer"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderFromHistory" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/colorSilver"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/PoppinsTextSmallStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Net" />

            <TextView
                style="@style/PoppinsTextMediumSemiBoldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="0.00" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSend"
            style="@style/PoppinsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_send"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/title_send"
            android:textColor="@color/colorMantis"
            app:drawableTint="@color/colorMantis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/PoppinsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_save"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/title_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSend"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>